# mind-flow

./: .gitignore  .gitmodules  .markdownlint.yaml  CLAUDE.md  LICENSE  Makefile  NOTES.md  README.md  TESTING_WORKFLOW.md  mkdocs.ci.yml  mkdocs.yml  pyproject.toml  readme-index.py  requirements.txt
2009/: 2009-11-08-gnustep-getting-started.md
2010/: 2010-04-22-how-to-setup-rubyrails-development.md  2010-10-31-why-should-i-attend-conferences.md  2010-12-15-java-build-tools-and-future.md
2011/: 2011-01-12-should-i-learn-lisp.md  2011-01-14-review-you-should-write-blogs.md  2011-01-22-lisp-ruby-acceptable-and-not-acceptable.md  2011-01-25-review-beating-averages.md  2011-01-26-review-language-grubbing.md  2011-02-15-lisp-balkanization.md  2011-10-10-overview-optimistic-vs-pessimistic.md  2011-10-21-java-reflection-invoke-constructor.md  2011-11-03-how-to-run-ant-script-from-batcmd.md
2012/: 2012-01-21-quick-way-to-join-array-of-string.md  2012-02-26-state-of-numerical-computation.md  2012-06-11-maven-resource-filtering.md  2012-10-27-mac-os-x-terminal-supports-colored.md  2012-11-02-how-to-configure-git-diff-and-merge.md  2012-12-12-groovy-or-jruby-for-java-developer.md  2012-12-31-jenkins-enhancements-without-plugins.md
2013/: 2013-01-26-jenkins-hierarchical-jobs-and-jobs.md  2013-02-09-i18n-vs-l10n.md  2013-04-23-java-pdf-libraries.md  2013-04-27-the-long-way-to-evernote.md  2013-05-23-graphics-unit-conversion.md  2013-06-14-java-barcode-generation-and-scanning.md  2013-07-01-jai-and-image-processing-in-java.md  2013-08-17-git-jenkins-gerrit-code-review-and-pre.md  (+4 more)
(+389 files in other folders)
