[project]
name = "mind-flow"
version = "0.1.0"
description = "Personal technical blog and knowledge base"
requires-python = ">=3.14"
dependencies = [
    "click>=8.2.1,<8.3.0",
    "mkdocs-material>=9.6",
    "mdx_truly_sane_lists>=1.3",
    "mkdocs-awesome-pages-plugin>=2.10",
    "mkdocs-git-revision-date-localized-plugin>=1.4",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-rss-plugin>=1.17",
]
